re-import workflow and update talk

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ permissions:
 
 jobs:
   convert:
+    name: Convert Markdown to Reveal.js
     runs-on: ubuntu-22.04
     steps:
       - name: Make Envs
@@ -17,7 +18,7 @@ jobs:
           echo "TALK_URL=https://${{ github.repository_owner }}.github.io/${REPO_NAME}" >> $GITHUB_ENV
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Make dist Directory
         run: mkdir -p dist
@@ -27,6 +28,9 @@ jobs:
 
       - name: Copy Reveal To Dist
         run: cp -r reveal.js dist/
+
+      - name: Copy Favicon To Dist
+        run: cp -r favicon.ico dist/
 
       - name: Make link QR Code
         uses: snow-actions/qrcode@v1.0.0
@@ -41,24 +45,25 @@ jobs:
         run: cat talk.md | envsubst > dist/talk.md
 
       - name: Build our Talk
-        uses: docker://pandoc/core:3.1
+        uses: docker://pandoc/core:3.5
         with:
           args: >-
             --slide-level 2
             --standalone
             -t revealjs
             -V theme=night
+            -V revealjs-url=reveal.js
             -s dist/talk.md
             -o dist/index.html
 
       - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
           path: dist
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
 
       - name: Print envs
         run: echo "Deployed To ${{ steps.deployment.outputs.page_url }}"
