trying out image resizing

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,6 +50,7 @@ jobs:
           args: >-
             --slide-level 2
             --standalone
+            --self-contained 
             -t revealjs
             -V theme=night
             -V revealjs-url=reveal.js
